--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyAppgen6to7MT">
         <activity
+            android:name=".SeekbarActivity"
+            android:exported="true" />
+        <activity
             android:name=".ImagePickActivity"
             android:exported="true" />
         <activity
@@ -30,7 +33,7 @@
             android:name=".LinearActivity"
             android:exported="true" />
         <activity
-            android:name=".SeekbarActivity"
+            android:name=".AlertActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
