--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyAppgen6to7MT">
         <activity
+            android:name=".DateTimeActivity"
+            android:exported="true" />
+        <activity
+            android:name=".AlertActivity"
+            android:exported="true" />
+        <activity
             android:name=".SeekbarActivity"
             android:exported="true" />
         <activity
@@ -33,7 +39,7 @@
             android:name=".LinearActivity"
             android:exported="true" />
         <activity
-            android:name=".AlertActivity"
+            android:name=".SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
