--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyAppgen6to7MT">
         <activity
+            android:name=".SpinnerActivity"
+            android:exported="true" />
+        <activity
+            android:name=".SignUpActivity"
+            android:exported="true" />
+        <activity
             android:name=".DateTimeActivity"
             android:exported="true" />
         <activity
