--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyAppgen6to7MT">
         <activity
+            android:name=".activity.TypeofMenuActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.Task2Activity"
+            android:exported="false" />
+        <activity
             android:name=".activity.FragmentLoadActivity"
             android:exported="false" />
         <activity
