--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyAppgen6to7MT">
         <activity
+            android:name=".MaterialBottomActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MaterialEditTextActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.MaterialActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.ConstActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.RecyclerviewActivity"
             android:exported="false" />
         <activity
