--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyAppgen6to7MT">
         <activity
+            android:name=".NotificationActivity"
+            android:exported="false" />
+
+        <service
+            android:name=".BoundService"
+            android:enabled="true"
+            android:exported="true" />
+
+        <activity
+            android:name=".Service2Activity"
+            android:exported="false" />
+        <activity
             android:name=".ServiceActivity"
             android:exported="false" />
         <activity
@@ -115,7 +127,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".MyService"/>
+
+        <service android:name=".MyService" />
     </application>
 
 </manifest>
